--- a/meme_generator/src/style/style.css
+++ b/meme_generator/src/style/style.css
@@ -29,20 +29,20 @@ div.header > h2{
     margin-right: auto;
     margin-left: 2%;
 }
-form{
+.form{
     display: grid;
     gap:17px;
     grid-template: 40px 40px / 1fr 1fr;
     padding-left: 5%;
     padding-right: 5%;
 }
-form > input{
+.form > input{
 
     border-radius: 5px;
     border: 1px solid #D5D4D8;
     text-indent: 5px;
 }
-form > button{
+.form > button{
     grid-column: 1 / -1;
     border-radius: 5px;
     background: #7317eb;    
