--- a/meme_generator/src/style/style.css
+++ b/meme_generator/src/style/style.css
@@ -52,8 +52,12 @@ div.header > h2{
     margin-left: 30%;
     margin-right: 30%;
 }
-.meme{
-    text-align: center;
-    padding: 100px;
+.memeImage{
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
