--- a/meme_generator/src/style/style.css
+++ b/meme_generator/src/style/style.css
@@ -5,6 +5,7 @@ body {
     font-family: "Karla", sans-serif;
     margin:0;
     margin-left: 3px;
+
     
 }
 .header{
@@ -35,13 +36,17 @@ div.header > h2{
     grid-template: 40px 40px / 1fr 1fr;
     padding-left: 5%;
     padding-right: 5%;
+    height: 100%;
 }
 .form > input{
 
     border-radius: 5px;
     border: 1px solid #D5D4D8;
     text-indent: 5px;
+
 }
+
+
 .form > button{
     grid-column: 1 / -1;
     border-radius: 5px;
@@ -52,12 +57,15 @@ div.header > h2{
     margin-left: 30%;
     margin-right: 30%;
 }
+
 .memeImage{
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    
+    max-width: 30%;
+    margin: auto;
+    padding: auto;
+    margin-top: 10px;
     display: block;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    border-radius: 3px;
+
 
 }
