--- a/meme_generator/src/style/style.css
+++ b/meme_generator/src/style/style.css
@@ -57,10 +57,13 @@ div.header > h2{
     margin-left: 30%;
     margin-right: 30%;
 }
+.memeImageContainer{
+position: relative;
+}
 
 .memeImage{
     
-    max-width: 30%;
+    max-width: 100%;
     margin: auto;
     padding: auto;
     margin-top: 10px;
@@ -69,3 +72,36 @@ div.header > h2{
 
 
 }
+.meme--text{
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
+}
+
