--- a/memory/src/style/app.css
+++ b/memory/src/style/app.css
@@ -3,12 +3,16 @@
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-html{
+
+body , html,.app ,#reactHere{
     height: 100%;
-}
-body , app {
-    height: 100%;
+    width: 100%;
+    margin: 0 ;
     text-align: center;
+
+}
+#reactHere{
+    height: 95%;
 }
 
 .header {
@@ -16,6 +20,7 @@ body , app {
     align-items: center;
     justify-content: space-around;
     height: 65px;
+    margin-bottom: 10px;
     box-shadow: 0 2px 4px 0px #76faf3;
     background: linear-gradient(180deg, #ffffff 1.18%, #e9fffe 100%);
 
@@ -23,21 +28,37 @@ body , app {
 
 .footer{
     /*footer en bas */
-    position: absolute;
+    position: inherit;
     bottom: 0;
+    margin-bottom: 0;
     background-color: #3b3b3b;
     width: 100%;
 }
 .memory{
-    box-sizing: content-box;
-    width: 500px;
-    height: 500px;
-    position: relative;
-    margin: auto;
-    padding: auto;
-    margin-top: 10px;
+    height: 90%;
+    background-color: rgb(250, 255, 181);
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(250, 255, 181);
 }
+.cardBoard{
+    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    
+}
+.card{
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+    justify-content: space-between;
+}
+.imageToFind{
+    width: 100%;
+    height: 100%;   
+    border-radius: 10px;
+    border : 1px solid   rgb(204, 201, 201);
+}
+
