--- a/memory/src/style/app.css
+++ b/memory/src/style/app.css
@@ -21,7 +21,7 @@ body , html,.app ,#reactHere{
     justify-content: space-around;
     height: 65px;
     margin-bottom: 10px;
-    box-shadow: 0 2px 4px 0px #76faf3;
+    box-shadow: 0 2px 4px 0px #76fa76;
     background: linear-gradient(180deg, #ffffff 1.18%, #e9fffe 100%);
 
 }
@@ -31,12 +31,12 @@ body , html,.app ,#reactHere{
     position: inherit;
     bottom: 0;
     margin-bottom: 0;
-    background-color: #3b3b3b;
+    background-color: #7c7c74;
     width: 100%;
 }
 .memory{
     height: 90%;
-    background-color: rgb(250, 255, 181);
+    background-color: rgb(255, 244, 196);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,17 +48,22 @@ body , html,.app ,#reactHere{
     justify-content: space-between;
     flex-flow: row wrap;
     
+    
 }
 .card{
     height: 100px;
     width: 100px;
     display: inline-block;
     justify-content: space-between;
+    border-radius: 10px;
+    
 }
 .imageToFind{
     width: 100%;
-    height: 100%;   
-    border-radius: 10px;
-    border : 1px solid   rgb(204, 201, 201);
+    height: 100%; 
+    border-radius: 10px;  
+    transition: all 0.8s ease;
+    
+
 }
 
