--- a/memory/src/style/app.css
+++ b/memory/src/style/app.css
@@ -56,6 +56,8 @@ body , html,.app ,#reactHere{
     display: inline-block;
     justify-content: space-between;
     border-radius: 10px;
+    transition: all 0.8s ease;
+
     
 }
 .imageToFind{
@@ -64,6 +66,7 @@ body , html,.app ,#reactHere{
     border-radius: 10px;  
     transition: all 0.8s ease;
     
-
 }
+
+
 
