--- a/memory/src/style/app.css
+++ b/memory/src/style/app.css
@@ -1,25 +1,20 @@
 * {
     padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Comic Sans MS, Comic Sans ,serif;
+    font-weight: lighter;
 }
-
 body , html,.app ,#reactHere{
-    height: 100%;
-    width: 100%;
     text-align: center;
-    margin-bottom: 0;
     margin:0;
 
 }
 .footer{
-
     background-color: beige;
 }
 
 
 
 .header {
-    margin:0;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -29,6 +24,7 @@ body , html,.app ,#reactHere{
     background: linear-gradient(180deg, #ffffff 1.18%, #e9fffe 100%);
 
 }
+
 .nbrPairsChoose{
     display: inline-flex;
 }
@@ -62,6 +58,7 @@ body , html,.app ,#reactHere{
 }
 .nbrPairsChooseBoard > .test >span{
     margin: 55px;
+    
 }
 
 .nbrPairs--hard {
