--- a/memory/src/style/app.css
+++ b/memory/src/style/app.css
@@ -14,8 +14,8 @@ body , html,.app ,#reactHere{
     justify-content: space-around;
     height: 50px;
     margin-bottom: 5px;
-    box-shadow: 0 2px 4px 0px #f7bdff;
-    background: linear-gradient(50deg, #ffffff 1.18%, #ffe9fa 90%);
+    box-shadow: 0 2px 4px 0px #d4d2f0;
+    background: linear-gradient(50deg, #ffffff 1.18%, #e1f2f9 90%);
 
 }
 .scoreBoard{
@@ -92,7 +92,7 @@ body , html,.app ,#reactHere{
     align-items: center;
     justify-content: space-between;
     flex-flow: row wrap;
-
+    margin: 0 auto;
     padding: 10px;
 
 }
@@ -118,6 +118,30 @@ body , html,.app ,#reactHere{
     transition: all 0.8s ease;
 }
 .back{
-    width: 50px;
-    background-color: aqua;
+    width: 60px;
+    height: 25px;
+    border-radius: 4px;
+    background-color:#fefffe;
+    border: black solid 1px;
+    margin: 0 auto;
+}
+.back:hover{
+    background-color: rgb(178, 180, 178);
+    transition: all 0.0s ease;
+}
+.bottonControl{
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.cheat{
+    background-color: #e1f2f9;
+    margin-right: 20px;
+}
+.box{
+    background-color: #65a5f724;
+    box-shadow: 0 2px 4px 0px rgb(176, 173, 177);
+    width: 1200px;
+    height: 500px;
+    margin: 0 auto;
 }
